Added sound to algo visualizer and some other small changes

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Austin's Website, Made using react" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/object-fit-images/3.2.4/ofi.min.js"></script>
+		<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
 		<title>Austin's Website</title>
 	</head>
 	<body style="background-color: #212529">
