--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,8 @@
 		<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
 		<title>Austin's Website</title>
 	</head>
-	<body
-		style="background-color: #212529; font-family: Consolas, monaco, monospace"
-	>
+	<body style="background-color: #212529; overflow-x: hidden">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="root"></div>
+		<div id="root" style="overflow-x: hidden"></div>
 	</body>
 </html>
