--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,21 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/object-fit-images/3.2.4/ofi.min.js"></script>
 		<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
 		<title>Austin's Website</title>
+
+		<!-- Google tag (gtag.js) -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-5RL40N53ZS"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+
+			gtag("config", "G-5RL40N53ZS");
+		</script>
 	</head>
 	<body style="background-color: #212529; overflow-x: hidden">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
