Stylistic Changes     - Changed color scheme     - Changed most pages to match new color scheme     - Removed mobile screen     - Added video background to homepage

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,16 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
+		<!-- <link
+			rel="preload"
+			href="https://www.youtube.com/embed/5rlZ9p6z270?autoplay=1&mute=1&controls=0&loop=1&playlist=5rlZ9p6z270&amp;showinfo=0"
+			as="document"
+		/>
+		<link
+			rel="preload"
+			href="https://www.youtube.com/embed/IWVJq-4zW24?autoplay=1&mute=1&controls=0&loop=1&playlist=IWVJq-4zW24&amp;showinfo=0"
+			as="document"
+		/> -->
 		<meta name="description" content="Austin's Website, Made using react" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/object-fit-images/3.2.4/ofi.min.js"></script>
 		<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
