--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 		<meta name="description" content="Austin's Website, Made using react" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/object-fit-images/3.2.4/ofi.min.js"></script>
 		<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-		<title>Austin's Website</title>
+		<title>Welcome to Austin's Website!</title>
 
 		<!-- Google tag (gtag.js) -->
 		<script
