Updated styling and fixed mobile rendering

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
-		<!-- <link
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <!-- <link
 			rel="preload"
 			href="https://www.youtube.com/embed/5rlZ9p6z270?autoplay=1&mute=1&controls=0&loop=1&playlist=5rlZ9p6z270&amp;showinfo=0"
 			as="document"
@@ -14,28 +14,34 @@
 			href="https://www.youtube.com/embed/IWVJq-4zW24?autoplay=1&mute=1&controls=0&loop=1&playlist=IWVJq-4zW24&amp;showinfo=0"
 			as="document"
 		/> -->
-		<meta name="description" content="Austin's Website, Made using react" />
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/object-fit-images/3.2.4/ofi.min.js"></script>
-		<script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-		<title>Welcome to Austin's Website!</title>
+        <meta name="description" content="Austin's Website, Made using react" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/object-fit-images/3.2.4/ofi.min.js"></script>
+        <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;1,300&display=swap"
+            rel="stylesheet"
+        />
+        <title>Welcome to Austin's Website!</title>
 
-		<!-- Google tag (gtag.js) -->
-		<script
-			async
-			src="https://www.googletagmanager.com/gtag/js?id=G-5RL40N53ZS"
-		></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag("js", new Date());
+        <!-- Google tag (gtag.js) -->
+        <script
+            async
+            src="https://www.googletagmanager.com/gtag/js?id=G-5RL40N53ZS"
+        ></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
 
-			gtag("config", "G-5RL40N53ZS");
-		</script>
-	</head>
-	<body style="background-color: #212529; overflow-x: hidden">
-		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="root" style="overflow-x: hidden"></div>
-	</body>
+            gtag("config", "G-5RL40N53ZS");
+        </script>
+    </head>
+    <body style="background-color: #212529; overflow-x: hidden">
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root" style="overflow-x: hidden"></div>
+    </body>
 </html>
